syntax = "proto3";

option csharp_namespace = "Aoba.RPC.Auth";
package aoba;

import "Proto/Types.proto";

service AuthRpc {
	rpc Login(Credentials) returns (LoginResponse);
	rpc LoginPasskey(PassKeyPayload) returns (LoginResponse);
}

