syntax = "proto3";

option csharp_namespace = "Aoba.RPC.Metrics";
package aoba;

import "google/protobuf/empty.proto";
import "Proto/Types.proto";


service MetricsRpc {
	rpc GetToken(google.protobuf.Empty) returns (Jwt);
}